# polymarket-hft

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  PROMPT.md  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: ci.yml
benches/: hot_path.rs
config/: default.toml
grafana/dashboards/: polymarket-hft.json
grafana/provisioning/dashboards/: default.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/auth/: eip712.rs  l2.rs  mod.rs
src/backtest/: engine.rs  mod.rs
src/backtest/fixtures/: book_2025_02.json  trades_2025_02.json  weather_2025_02.json
src/backtest/scenarios/: copy_trade_slippage.rs  mod.rs  spread_farming_baseline.rs  weather_signal_accuracy.rs
src/clob/: mod.rs  rest_client.rs  types.rs  ws_client.rs
src/data_api/: client.rs
src/executor/: batch_executor.rs  fee_calc.rs  mod.rs  order_builder.rs  rate_limiter.rs
src/gamma/: client.rs
src/monitoring/: health.rs  metrics.rs  mod.rs
src/noaa/: client.rs
src/orderbook/: cache.rs
src/risk/: circuit_breaker.rs  kelly.rs  mod.rs  position_tracker.rs
src/rtds/: ws_client.rs
src/sports_ws/: client.rs
src/strategies/: copy_trade.rs  custom_bot.rs  lp.rs  mod.rs  penny_longshot.rs  spread_farming.rs  weather.rs
